--- a/Preamble.sty
+++ b/Preamble.sty
@@ -1,5 +1,6 @@
 % Page layout
-\usepackage[left=25mm, top=10mm, right=35mm, bottom=20mm]{geometry}
+\usepackage[left=15mm, top=10mm, right=15mm, bottom=20mm]{geometry}
+\usepackage{setspace}
 
 % Nice dot
 \usepackage{graphicx}
@@ -8,7 +9,7 @@
 % Math
 \usepackage{amsmath}
 \usepackage{enumerate}
-\usepackage[shortlabels]{enumitem}
+\usepackage{enumitem}
 
 % Pictures
 \usepackage{asymptote}
