Fixed plots for 24.09.24, changed preamble

--- a/24.09.24/4.tex
+++ b/24.09.24/4.tex
@@ -15,17 +15,17 @@
     \underline{Домашнее задание:} привести пример, когда функция в точке определена, а предела в этой точке у неё нет.    
     \begin{figure}[h]
         \begin{subfigure}[t]{0.3\textwidth}
-            \includegraphics{4-1.pdf}
+            \includegraphics{pic-1.pdf}
             \caption{}
         \end{subfigure}
         \hfill
         \begin{subfigure}[t]{0.3\textwidth}
-            \includegraphics{4-2.pdf}
+            \includegraphics{pic-2.pdf}
             \caption{\(y = sign(x)\)}
         \end{subfigure}
         \hfill
         \begin{subfigure}[t]{0.3\textwidth}
-            \includegraphics{4-3.pdf}
+            \includegraphics{pic-3.pdf}
             \caption{\(y = [x]\)}
         \end{subfigure}
     \end{figure}\\
