--- a/Preamble.sty
+++ b/Preamble.sty
@@ -8,11 +8,15 @@
 
 % Math
 \usepackage{amsmath}
+
+% Enumerate
 \usepackage{enumerate}
 \usepackage{enumitem}
 
 % Pictures
 \usepackage{asymptote}
+\usepackage{subcaption}
+\usepackage{subfig}
 
 % Language
 \usepackage[utf8]{inputenc}
