Fixed typos in 01.10.24, updated hypersnips

--- a/01.10.24/5.tex
+++ b/01.10.24/5.tex
@@ -18,8 +18,8 @@
 \underline{Доказательство.}\\
 Пусть \(f(x)\) и \(g(x)\) --- бесконечно малы при \(x \to a\). Тогда
 \begin{enumerate}
-    \item \(\displaystyle \forall \varepsilon > 0 \exists \delta_{1} > 0 : \forall x \in 0 < \vert x - a \vert < \delta_{1}: \vert f(x) \vert < \frac{\varepsilon}{2}\). 
-    \item \(\displaystyle \forall \varepsilon > 0 \exists \delta_{2} > 0 : \forall x \in 0 < \vert x - a \vert < \delta_{2}: \vert g(x) \vert < \frac{\varepsilon}{2}\). 
+    \item \(\displaystyle \forall \varepsilon > 0\ \exists \delta_{1} > 0 : \forall x \in 0 < \vert x - a \vert < \delta_{1}: \vert f(x) \vert < \frac{\varepsilon}{2}\). 
+    \item \(\displaystyle \forall \varepsilon > 0\ \exists \delta_{2} > 0 : \forall x \in 0 < \vert x - a \vert < \delta_{2}: \vert g(x) \vert < \frac{\varepsilon}{2}\). 
 \end{enumerate}
 \noindent
 Положим \(\delta = \min\{\delta_{1},\ \delta_{2}\}\). При таком \(\delta \) оба неравенства выполнены автоматиески: \(\displaystyle \forall x \in \{0 < \vert x - a \vert < \delta\}\ \vert f(x) \vert < \frac{\varepsilon}{2}\) и \(\displaystyle \vert g(x) \vert < \frac{\varepsilon}{2}\). 
@@ -46,7 +46,7 @@
     Пусть \(f(x)\) и \(g(x)\) --- две бесконечно малые функции. Тогда предел вида \(\displaystyle \lim\limits_{x \to a} \frac{f(x)}{g(x)}\) называется неопределенностью типа \(\displaystyle \frac{0}{0}\).    
 \end{definition}
 \noindent
-\textbf{Пример.} \(\displaystyle \lim\limits_{x \to 0} \frac{\sin(x)}{x}\).
+\textbf{Пример.} \(\displaystyle \lim\limits_{x \to 0} \frac{\sin(x)}{x} = \left[\frac{0}{0}\right]\).
 
 %────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 \begin{definition}
