--- a/24.09.24/4.tex
+++ b/24.09.24/4.tex
@@ -96,7 +96,7 @@
         Функция \(f(x)\) называется бесконечно малой в точке \(a\) (при \(x \to a\)), если \(\lim\limits_{x \to a}f(x) = 0\).
     \end{definition}
     \noindent
-    \underline{Домашнее задание:} записать это определение на языке \(\varepsilon\), \(\delta\).\\
+    \underline{Домашнее задание:} записать это определение на языке \(\varepsilon\), \(\delta\).\\[0.1cm]
     \textbf{Пример 1.} \(\displaystyle \sin(x)\) бесконечно малая в точке \(0\).\\
     \underline{Замечание:} функция бесконечно малая в точке \(a\) --- вообще говоря --- в точке \(a\) может не обращаться в 0.\\
     \textbf{Пример 2.} \(\displaystyle f(x) =
