--- a/Preamble.sty
+++ b/Preamble.sty
@@ -2,9 +2,10 @@
 \usepackage[left=15mm, top=10mm, right=15mm, bottom=20mm]{geometry}
 \usepackage{setspace}
 
-% Nice dot
+% Custom commands
 \usepackage{graphicx}
 \newcommand\dt[1][.5]{\mathbin{\vcenter{\hbox{\scalebox{#1}{$\bullet$}}}}}
+\newcommand\at[2]{#1\Bigr|_{\substack{\scalebox{1.2}{$#2$}}}}
 
 % Math
 \usepackage{amsmath}
