Lost track of commits already

--- a/05.11.24/10.tex
+++ b/05.11.24/10.tex
@@ -56,7 +56,7 @@ f^{\prime}_{+}(0) \neq f^{\prime}_{-}(0) \implies \nexists f^{\prime}(0)\).
 \begin{definition}[Частная производная]
     Пусть дана функция \(f: \mathbb{R}^n \to \mathbb{R}\). Пусть
     \[
-        \exists \lim\limits_{h_{i} \to 0} \frac{f(x_{1}, \dots , x_{i} - h_{i}, \dots , x_{m}) - f(x_{1}, \dots, x_{i}, \dots, x_{m})}{h_{i}} = a_{i}(x)
+        \exists \lim\limits_{h_{i} \to 0} \frac{f(x_{1}, \dots , x_{i} + h_{i}, \dots , x_{m}) - f(x_{1}, \dots, x_{i}, \dots, x_{m})}{h_{i}} = a_{i}(x)
     \]
     Тогда эта величина называется частной производной функции \(f(x)\) в точке \(x = (x_{1}, \dots, x_{m})\) по переменной \(x_{i}\) и обозначается как \(\displaystyle \frac{\partial f}{\partial x_{i}}(x)\). 
 \end{definition}
