--- a/Preamble.sty
+++ b/Preamble.sty
@@ -5,7 +5,7 @@
 % Custom commands
 \usepackage{graphicx}
 \newcommand\dt[1][.5]{\mathbin{\vcenter{\hbox{\scalebox{#1}{$\bullet$}}}}}
-\newcommand\at[2]{#1\Bigr|_{\substack{\scalebox{1.2}{$#2$}}}}
+\newcommand\at[2]{#1\Big|_{\ \substack{\scalebox{1}{$#2$}}}}
 
 % Math
 \usepackage{amsmath}
