--- a/17.09.24/3.tex
+++ b/17.09.24/3.tex
@@ -131,7 +131,7 @@
     \end{definition}   
     \noindent
     \textbf{Пример 1}: \(X = \{x : a < x < b\}\), любая точка такого интервала (а также точки \(a\) и \(b\)) является предельной точкой \(X\).\\
-    \textbf{Пример 2}: Множество \(\mathbb{R}\) не имеет ни одной предельной точки.\\ \\
+    \textbf{Пример 2}: Множество \(\mathbb{N}\) не имеет ни одной предельной точки.\\ \\
     Пусть функция \(y = f(x)\) определена на множестве \(X\). Пусть \(A\) --- предельная точка множества \(X\).   
     \begin{definition}[Определение предела по Коши]
         Число \(B\) называется пределом функции \(f(x)\) в точке \(a\) (при \(x \to a\)), если \[\forall \varepsilon > 0\ \exists \delta(\varepsilon) > 0: \forall x \in D(f): 0 < |x - a| < \delta \implies |f(x) - B| < \varepsilon\] 
