--- a/Preamble.sty
+++ b/Preamble.sty
@@ -31,9 +31,9 @@
 \usepackage{enumitem}
 
 % Pictures
-\usepackage{asymptote}
-\usepackage{subcaption}
-\usepackage{subfig}
+% \usepackage{asymptote}
+% \usepackage{subcaption}
+% \usepackage{subfig}
 % \usepackage[edges]{forest}
 
 % Language
