--- a/Preamble.sty
+++ b/Preamble.sty
@@ -1,5 +1,6 @@
 % Page layout
 \usepackage[left=15mm, top=10mm, right=15mm, bottom=20mm]{geometry}
+\renewcommand{\baselinestretch}{1.2}
 
 \newenvironment{changemargin}[2]{%
 \begin{list}{}{%
@@ -25,6 +26,7 @@
 % Math
 \usepackage{amsmath}
 \usepackage{mathtools}
+\usepackage{centernot}
 
 % Enumerate
 \usepackage{enumerate}
